--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,14 +8,16 @@ trigger:
 
 strategy:
   matrix:
-    jdk10:
+    jdk10_linux:
       jdk_version: "1.10"
-    jdk11:
+      imageName: "ubuntu-16.04"
+    jdk11_windows:
       jdk_version: "1.11"
+      imageName: "vs2017-win2016"
   maxParallel: 2
 
 pool:
-  vmImage: "ubuntu-16.04"
+  vmImage: $(imageName)
 
 steps:
 - task: Maven@3
